web-application/manifests/ingress-no-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-no-domain
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
